# tgw_challenge

./: Readme.txt
tgw_gazebo/: CMakeLists.txt  package.xml
tgw_gazebo/launch/: tgw_arena.launch
tgw_turtlebot3_description/: CMakeLists.txt  package.xml
tgw_turtlebot3_description/urdf/: tgw_turtlebot3_burger_tgw_challenge.gazebo.xacro  tgw_turtlebot3_burger_tgw_challenge.urdf.xacro
