<?xml version="1.0"?>
<package format="2">
  <name>tgw_turtlebot3_description</name>
  <version>1.2.3</version>
  <description>
    3D models of the TurtleBot3 for simulation and visualization for the TGW-Challenge
  </description>
  <license>Apache 2.0</license>
  <author email="raimund.edlinger@fh-wels.at">Raimund Edlinger</author>
  <maintainer email="raimund.edlinger@fh-wels.at">Raimund Edlinger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
